# SPDX-FileCopyrightText: 2022 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "codify"
version = "0.5.0"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """
    A Rust library that helps with generating code from 'build.rs'.
    """
repository = "https://github.com/hoijui/codify-rs"
homepage = "https://github.com/hoijui/codify-rs"
keywords = ["code-generation"]
categories = ["code-generation"]
readme = "README.md"
edition = "2021"
