# SPDX-FileCopyrightText: 2022 - 2024 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
# NOTE We use the "_hoijui" postfix, because we assume
#      that this crate will not be of much interest
#      to the general public.
#      This allows us to publish it anyway,
#      without blocking the short name
#      for a more meaningful crate in the future.
name = "codify_hoijui"
version = "0.6.0"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """
    Helps in automatic code generation at compile-time,
    for initializing structs and enums containing data,
    which is to be available at runtime.
    """
repository = "https://github.com/hoijui/codify-rs"
homepage = "https://github.com/hoijui/codify-rs"
keywords = ["code-generation"]
categories = ["data-structures", "development-tools::build-utils"]
readme = "README.md"
edition = "2021"

[lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
